force-app/main/default/objects/TrackingUpdate__e/TrackingUpdate__e.object-meta.xml
<CustomObject>
    <description>Platform event fired when a Tracking record is created/updated. Used for real-time dashboard refresh and exception detection triggers.</description>
    <label>Tracking Update</label>
    <pluralLabel>Tracking Updates</pluralLabel>
</CustomObject>