force-app/main/default/objects/TrackingUpdate__e/fields/Driver_Id__c.field-meta.xml
<CustomField>
    <fullName>Driver_Id__c</fullName>
    <label>Driver Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>