force-app/main/default/objects/TrackingUpdate__e/fields/Event_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Event_Timestamp__c</fullName>
    <label>Event Timestamp</label>
    <length>30</length>
    <type>Text</type>
</CustomField>