force-app/main/default/objects/TrackingUpdate__e/fields/Sequence_Number__c.field-meta.xml
<CustomField>
    <fullName>Sequence_Number__c</fullName>
    <label>Sequence Number</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>