force-app/main/default/objects/TrackingUpdate__e/fields/Speed_mph__c.field-meta.xml
<CustomField>
    <fullName>Speed_mph__c</fullName>
    <label>Speed (mph)</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>