force-app/main/default/objects/TrackingUpdate__e/fields/Tracking_Id__c.field-meta.xml
<CustomField>
    <fullName>Tracking_Id__c</fullName>
    <label>Tracking Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>